@@ -6,7 +6,7 @@
 
     <groupId>dev.mccue</groupId>
     <artifactId>microhttp-session</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -54,6 +54,16 @@
         </dependency>
         <dependency>
             <groupId>dev.mccue</groupId>
+            <artifactId>microhttp-handler</artifactId>
+            <version>0.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.mccue</groupId>
+            <artifactId>async</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.mccue</groupId>
             <artifactId>json</artifactId>
             <version>0.2.4</version>
         </dependency>
@@ -66,6 +76,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
+                <configuration>
+                    <compilerArgs>
+                        --enable-preview
+                    </compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
